--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "license": "MIT",
   "scripts": {
     "start": "node build/index.js"
+  },
+  "repository": {
+    "url": "https://github.com/KogaYamada/arrayy",
+    "type": "git"
   }
 }
