--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "type": "git"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.8",
     "jest": "^26.2.2",
     "ts-jest": "^26.1.4"
