--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Run Django unit tests
+      - name: Run Jest unit tests
         run: |
-          npm install
-          npm test
+          yarn install
+          yarn jest
